[project]
name = "desk-control"
authors = [
    {name = "Alexis Balayre", email = "alexis@balayre.com"}
]
version = "1.0.0"
description = "BLE control library for AOKE-based standing desks (Ergomate / Aum World)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak>=2.1.1",
]

[tool.setuptools]
py-modules = ["desk"]

[tool.setuptools.data-files]
"." = ["config.toml"]

[project.scripts]
desk = "desk:cli"
